--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Desenvolvedor Front-End e UX/UI Designer.">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Flamenco&display=swap');
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
