--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="mobile2">
-    <img id="img" src="img/intro3.svg" alt="" width="500" height="396">
+    <img id="img" src="img/intro3.svg" alt="" height="350">
   </div>
 
   <article aria-label="Experiência" id="experiencia" class="painel painel-tamanho experiencia">
