--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="pacote">
       <div class="pacote-first">
         <h3 class="nome">Bitenc</h3>
-        <p class="cont">Desenvolvimento e prototipação de design desta pagina, durante o curso de HTML, CSS e UI Design para inciantes</p>
+        <p class="cont">Desenvolvimento e prototipação de design desta pagina, durante o curso de HTML, CSS e UI Design para iniciantes</p>
       </div>
       <div>
         <p class="nome">Projeto Pessoal</p>
