--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
 
-  <link rel="stylesheet" href="styles/imports.min.css" />
+  <link rel="stylesheet" href="styles/imports.css" />
 
   <link rel="icon" href="FavIcon.svg" sizes="any" type="image/svg+xml" />
   <title>Bitenc</title>
@@ -30,8 +30,8 @@
     </nav>
   </header>
 
-  <main class="painelInit inicial">
-    <div id="intro">
+  <main class="painelInit inicial fadeInUp" data-anime="130">
+    <div id="intro ">
       <img src="img/ilustracao.svg" alt="" />
 
     </div>
@@ -198,6 +198,9 @@
       <p>Bitenc. Alguns direitos reservados.</p>
     </footer>
   </section>
+
+  <script src="./scripts/plugins/simple-anime.js"></script>
+  <script src="./scripts/script.js"></script>
 
 </body>
 
