--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header class="header">
-    <img id="logo" src="Logo.svg" alt="Logo" />
+    <a href="./index.html"><img id="logo" src="Logo.svg" alt="Logo" /></a>
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia"> Experiência</a></li>
